# sugar-artwork

./: CHANGES  NEWS  configure.ac  sugar-artwork-0.98_0.98.orig.tar.bz2.delta  sugar-artwork-0.98_0.98.orig.tar.bz2.id
debian/: changelog  control  rules
debian/patches/: 2001_empy_from_system.patch
dextrose/: sugar-artwork.spec
gtk/theme/: Makefile.am
gtk3/theme/: Makefile.am  gtk-contrast-widgets.css.em  gtk-contrast.css  gtk-widgets.css.em
gtk3/theme/assets/: Makefile.am
icons/scalable/actions/: Makefile.am
icons/scalable/device/: Makefile.am
icons/scalable/emblems/: Makefile.am
